fix notification borders, spacing

--- a/src/notification/css/components/_honeycomb.notification.block.scss
+++ b/src/notification/css/components/_honeycomb.notification.block.scss
@@ -1,13 +1,18 @@
+.band .notification--block {
+    @include margin(0.5, left);
+    @include margin(0.5, right);
+}
+
 .notification--block {
 
     border: none;
     @include padding(0);
+    @include border-left;
+    @include px-rem('border-left-width', 15);
 
     .notification--block__inner-container {
         margin: auto;
         @include padding(0.5);
-        @include border-left;
-        @include px-rem('border-left-width', 15);
     }
 
     .notification__close {
@@ -27,9 +32,7 @@
      * Info
      */
     &.notification--info {
-        .notification--block__inner-container {
-            border-color: color('blue');
-        }
+        border-color: color('blue');
 
         .notification__close,
         .notification__icon {
@@ -41,9 +44,7 @@
      * Fail
      */
     &.notification--fail {
-        .notification--block__inner-container {
-            border-color: color('red');
-        }
+        border-color: color('red');
 
         .notification__close,
         .notification__icon {
@@ -55,9 +56,7 @@
      * Success
      */
     &.notification--success {
-        .notification--block__inner-container {
-            border-color: color('green');
-        }
+        border-color: color('green');
 
         .notification__close,
         .notification__icon {
@@ -69,9 +68,7 @@
      * Warning
      */
     &.notification--warning {
-        .notification--block__inner-container {
-            border-color: color('yellow');
-        }
+        border-color: color('yellow');
 
         .notification__close,
         .notification__icon {
